--- a/Multiple_Engine/FP32/AIE16/Makefile_VCK5000
+++ b/Multiple_Engine/FP32/AIE16/Makefile_VCK5000
@@ -10,15 +10,21 @@ PLATFORM = ${PLATFORM_REPO_PATHS}/${PLATFORM_NAME}/${PLATFORM_NAME}.xpfm
 XCLBIN   = ${PLATFORM_NAME}${TARGET}.xsa
 HOST_EXE = hostexe
 HOST_SRCS := ./host/host.cpp
+BUILD_DIR_MAIN = build
+EXEC_DIR = output
 
 FINAL_XCLBIN=mm_${TARGET}.xclbin
-TEMP_DIR := ./_x.$(TARGET).${PLATFORM_NAME}
-BUILD_DIR := ./build_dir.$(TARGET).${PLATFORM_NAME}
-KERNEL_XO :=$(TEMP_DIR)/dma0.xo 
+TEMP_DIR := ./$(BUILD_DIR_MAIN)/_x.$(TARGET).${PLATFORM_NAME}
+BUILD_DIR := ./$(BUILD_DIR_MAIN)/build_dir.$(TARGET).${PLATFORM_NAME}
+KERNEL_XO :=$(TEMP_DIR)/dma0.xo
+
+# AIE specific variables
 GRAPH   := aie/aie_top_all.cpp
 LIBADF  = libadf.a
-AIE_CMPL_CMD = aiecompiler -platform=${PLATFORM} --target=hw --stacksize=1024 --pl-register-threshold=250 --pl-freq=230  -include="./aie" -include="./aie/layer0"  --constraints ./aie_top_all_aie_mapped.aiecst --disable-transform-broadcast-split=false -workdir=./Work ${GRAPH}
-AIE_SIM_CMD = aiesimulator --pkg-dir=./Work --dump-vcd foo --profile
+AIE_WORK_DIR = $(BUILD_DIR_MAIN)/Work_AIE
+AIE_SIM_DIR = simulation/aiesim
+AIE_CMPL_CMD = aiecompiler -platform=${PLATFORM} --target=hw --stacksize=1024 --pl-register-threshold=250 --pl-freq=230  -include="./aie" -include="./aie/layer0"  --constraints ./aie_top_all_aie_mapped.aiecst --disable-transform-broadcast-split=false -workdir=./$(AIE_WORK_DIR) ${GRAPH} --output-archive=$(EXEC_DIR)/$(LIBADF)
+AIE_SIM_CMD = aiesimulator --pkg-dir=./$(AIE_WORK_DIR) --dump-vcd $(AIE_SIM_DIR)foo --profile
 AIE_HOSTEXE = aie_control_xrt.o
 
 EMU_CMD = ./launch_hw_emu.sh
@@ -91,9 +97,10 @@ all: aie kernels build host package
 
 aie: guard-PLATFORM_REPO_PATHS ${LIBADF}
 ${LIBADF}: ${GRAPH}
-	@rm -rf Work libadf.a
-	@mkdir -p Work
-	${AIE_CMPL_CMD}
+	@rm -rf $(AIE_WORK_DIR) $(EXEC_DIR)/libadf.a
+	@mkdir -p $(AIE_WORK_DIR)
+	@mkdir -p $(EXEC_DIR)
+	time ${AIE_CMPL_CMD}
 	@echo "COMPLETE: aie success."
 
 aiesim: ${LIBADF}
@@ -104,24 +111,27 @@ aiesim: ${LIBADF}
 kernels:$(KERNEL_XO)
 $(TEMP_DIR)/dma0.xo: kernel0/dma0.cpp kernel0/dma0.hpp
 	mkdir -p $(TEMP_DIR)
-	$(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 $< -o $@ | tee $(TEMP_DIR)/dma0.log
+	@mkdir -p $(EXEC_DIR)
+	time $(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 $< -o $@ | tee $(TEMP_DIR)/dma0.log
 	@echo "### ***** dma0 compilation done! *****"
 build: $(BINARY_CONTAINERS)
 $(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} ${LIBADF}
 	mkdir -p $(BUILD_DIR)
-	v++ -l $(CLFLAGS) --temp_dir $(BUILD_DIR) $(LDCLFLAGS) -o $@ ${KERNEL_XO} ${LIBADF}
+	@mkdir -p $(EXEC_DIR)
+	time v++ -l $(CLFLAGS) --temp_dir $(BUILD_DIR) $(LDCLFLAGS) -o $@ ${KERNEL_XO} $(EXEC_DIR)/${LIBADF}
 
 host:$(HOST_EXE)
 $(HOST_EXE):
-	$(CXX) $(HOST_SRCS) $(GCC_FLAGS) -fopenmp $(GCC_INCLUDES) -o main.o
-	$(CXX) *.o $(GCC_LIB) -fopenmp -o $(HOST_EXE)
+	@mkdir -p $(EXEC_DIR)
+	time $(CXX) $(HOST_SRCS) $(GCC_FLAGS) -fopenmp $(GCC_INCLUDES) -o $(EXEC_DIR)/main.o
+	time $(CXX) $(EXEC_DIR)/*.o $(GCC_LIB) -fopenmp -o $(EXEC_DIR)/$(HOST_EXE)
 	@echo "COMPLETE: Host application created."
 
 package:${FINAL_XCLBIN}
 ${FINAL_XCLBIN}: $(BINARY_CONTAINERS) $(LIBADF) 
-	v++ -p -t $(TARGET) -f $(PLATFORM) $(BINARY_CONTAINERS) $(LIBADF) -o ${FINAL_XCLBIN} --package.boot_mode=ospi
+	@mkdir -p $(EXEC_DIR)
+	time v++ -p -t $(TARGET) -f $(PLATFORM) $(BINARY_CONTAINERS) $(EXEC_DIR)/$(LIBADF) -o $(EXEC_DIR)/${FINAL_XCLBIN} --package.boot_mode=ospi
 	@echo "COMPLETE: package created."
-
 
 clean:
 	-$(RMDIR) $(HOST_EXE) $(XCLBIN)/{*sw_emu*,*hw_emu*} 
@@ -129,10 +139,9 @@ clean:
 	-$(RMDIR)  *v++* .Xil emconfig.json dltmp* xmltmp* *.log *.jou *.wcfg *.wdb *bin* *summary* *.BIN *.bif *.exe  *.log *.txt 
 
 cleanall: clean
-	-$(RMDIR) build_dir* sd_card*
+	-$(RMDIR) build* sd_card*
 	-$(RMDIR) package.* run_app.sh 
 	-$(RMDIR) *xclbin.run_summary qemu-memory-_* emulation _vimage pl* start_simulation.sh *.xclbin
-	$(MAKE) -C sw clean
 
 cleansim:
 	-$(RMDIR) aiesimulator_output foo.vcd ISS_RPC_SERVER_PORT
