Script to run on VCK5000 cluster

--- a/Multiple_Engine/FP32/AIE16/Makefile_VCK5000
+++ b/Multiple_Engine/FP32/AIE16/Makefile_VCK5000
@@ -149,3 +149,6 @@ cleantemp:
 	-$(RMDIR) ./_x.$(TARGET).${PLATFORM_NAME}
 cleanpac:
 	-$(RMDIR) hostexe main.o mm_hw.xclbin boot_image.bif BOOT.BIN aie.merged.cdo.bin
+
+# Sample Make Command 
+# time make -f Makefile_VCK5000 all &> make_all.log
