--- a/Multiple_Engine/fp32/AIE16/Makefile_VCK5000
+++ b/Multiple_Engine/fp32/AIE16/Makefile_VCK5000
@@ -1,13 +1,19 @@
+# Author : Kaustubh Mhatre (kmhatre@asu.edu)
+# Advent Lab @ asu 
 mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
 mkfile_dir := $(dir $(mkfile_path))
+
+#Host and target defination 
 TARGET   = hw
 MODE	 = linux
 HOST_ARCH = x86
+
 Frequency = 230
 PLATFORM_REPO_PATHS=/opt/xilinx/platforms
 PLATFORM_NAME=xilinx_vck5000_gen4x8_qdma_2_202220_1
 PLATFORM = ${PLATFORM_REPO_PATHS}/${PLATFORM_NAME}/${PLATFORM_NAME}.xpfm
 XCLBIN   = ${PLATFORM_NAME}${TARGET}.xsa
+
 HOST_EXE = hostexe
 HOST_SRCS := ./host/host.cpp
 BUILD_DIR_MAIN = build
