--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,9 @@ hostexe
 
 # Everything inside build
 build/
-Multiple_Engine/FP32/AIE16/_x
+Multiple_Engine/*/*/_x
 Multiple_Engine/FP32/AIE16/_x.hw.xilinx_vck5000_gen4x8_qdma_2_202220_1
-Multiple_Engine/FP32/AIE16/.ipcache
+Multiple_Engine/*/*/.ipcache
 Multiple_Engine/FP32/AIE16/.Xil
 Multiple_Engine/FP32/AIE16/build_dir.hw.xilinx_vck5000_gen4x8_qdma_2_202220_1
 Work 
@@ -51,6 +51,9 @@ Single_Engine/int8/sim
 Single_Engine/int8/work_aie
 Single_Engine/FP32
 Multiple_Engine/*/*/sim
+
+# Keep the previous compilation done inside FP32 folder as is 
+Multiple_Engine/FP32
 
 # Everything inside .vscode
 .vscode/
