--- a/Multiple_Engine/fp32/AIE16/Makefile_VCK5000
+++ b/Multiple_Engine/fp32/AIE16/Makefile_VCK5000
@@ -20,7 +20,7 @@ BUILD_DIR_MAIN = build
 EXEC_DIR = output
 
 FINAL_XCLBIN=mm_${TARGET}.xclbin
-TEMP_DIR := ./$(BUILD_DIR_MAIN)/_x.$(TARGET).${PLATFORM_NAME}
+TEMP_DIR := ./$(BUILD_DIR_MAIN)/dma0.$(TARGET).${PLATFORM_NAME}
 BUILD_DIR := ./$(BUILD_DIR_MAIN)/build_dir.$(TARGET).${PLATFORM_NAME}
 KERNEL_XO :=$(TEMP_DIR)/dma0.xo
 
@@ -118,8 +118,9 @@ kernels:$(KERNEL_XO)
 $(TEMP_DIR)/dma0.xo: kernel0/dma0.cpp kernel0/dma0.hpp
 	mkdir -p $(TEMP_DIR)
 	@mkdir -p $(EXEC_DIR)
-	time $(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 $< -o $@ | tee $(TEMP_DIR)/dma0.log
+	time $(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 --temp_dir $(TEMP_DIR)/hls_kernel_temp/ $< -o $@ | tee $(TEMP_DIR)/dma0.log
 	@echo "### ***** dma0 compilation done! *****"
+
 build: $(BINARY_CONTAINERS)
 $(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} ${LIBADF}
 	mkdir -p $(BUILD_DIR)
@@ -147,7 +148,8 @@ clean:
 cleanall: clean
 	-$(RMDIR) build* sd_card*
 	-$(RMDIR) package.* run_app.sh 
-	-$(RMDIR) *xclbin.run_summary qemu-memory-_* emulation _vimage pl* start_simulation.sh *.xclbin
+	-$(RMDIR) *xclbin.run_summary qemu-memory-_* emulation _vimage pl* start_simulation.sh *.xclbin .ipcache
+	-$(RMDIR) output
 
 cleansim:
 	-$(RMDIR) aiesimulator_output foo.vcd ISS_RPC_SERVER_PORT
