--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ Multiple_Engine/*/*/sim
 # Keep the previous compilation done inside FP32 folder as is 
 Multiple_Engine/FP32
 
+Single_Engine/AIE_ML
+
 # Everything inside .vscode
 .vscode/
 
