--- a/Multiple_Engine/fp32/AIE16/Makefile_VCK190
+++ b/Multiple_Engine/fp32/AIE16/Makefile_VCK190
@@ -130,7 +130,7 @@ all: aie build host package
 run: all run_hw_emu
 sd_card: all
 
-aie: guard-PLATFORM_REPO_PATHS ${LIBADF}
+aie: guard-PLATFORM_REPO_PATHS $(EXEC_DIR)/${LIBADF}
 ${LIBADF}: ${GRAPH}
 	@mkdir -p $(AIE_WORK_DIR)
 	@mkdir -p $(EXEC_DIR)
@@ -149,7 +149,7 @@ $(TEMP_DIR)/dma0.xo: kernel0/dma0.cpp kernel0/dma0.hpp
 	$(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 $< -o $@ | tee $(TEMP_DIR)/dma0.log
 	@echo "### ***** dma0 compilation done! *****"
 build: $(BINARY_CONTAINERS)
-$(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} ${LIBADF}
+$(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} $(EXEC_DIR)/${LIBADF}
 	mkdir -p $(BUILD_DIR)
 	@mkdir -p $(EXEC_DIR)
 	v++ -l $(CLFLAGS) --temp_dir $(BUILD_DIR) $(LDCLFLAGS) -o'$@' $(+) | tee $(BUILD_DIR)/hpc_xclbin.log
@@ -187,7 +187,7 @@ package_${TARGET}: unzip ${PRE_BUILT_LIBADF} ${PRE_BUILT_XCLBIN} host
 		${PRE_BUILT_LIBADF} ${PRE_BUILT_XCLBIN} -o ${FINAL_XCLBIN}
 	@echo "COMPLETE: Package created."
 else
-package_${TARGET}: ${LIBADF} ${BINARY_CONTAINERS} host
+package_${TARGET}: $(EXEC_DIR)/${LIBADF} ${BINARY_CONTAINERS} host
 	${VCC} -p -t ${TARGET} -f ${PLATFORM} \
 		--package.out_dir $(PACKAGE_OUT) \
 		--package.rootfs ${ROOTFS} \
@@ -196,7 +196,7 @@ package_${TARGET}: ${LIBADF} ${BINARY_CONTAINERS} host
 		--package.image_format=ext4 \
 		--package.defer_aie_run \
 		--package.sd_file ${HOST_EXE} \
-		${LIBADF} ${BINARY_CONTAINERS} -o ${FINAL_XCLBIN}
+		$(EXEC_DIR)/${LIBADF} ${BINARY_CONTAINERS} -o ${FINAL_XCLBIN}
 	@echo "COMPLETE: Package created."
 endif
 
