--- a/Multiple_Engine/fp32/AIE32/Makefile_VCK5000
+++ b/Multiple_Engine/fp32/AIE32/Makefile_VCK5000
@@ -1,24 +1,36 @@
+# Author : Kaustubh Mhatre (kmhatre@asu.edu)
+# Advent Lab @ asu 
 mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
 mkfile_dir := $(dir $(mkfile_path))
+
+#Host and target defination 
 TARGET   = hw
 MODE	 = linux
 HOST_ARCH = x86
+
 Frequency = 230
 PLATFORM_REPO_PATHS=/opt/xilinx/platforms
 PLATFORM_NAME=xilinx_vck5000_gen4x8_qdma_2_202220_1
 PLATFORM = ${PLATFORM_REPO_PATHS}/${PLATFORM_NAME}/${PLATFORM_NAME}.xpfm
 XCLBIN   = ${PLATFORM_NAME}${TARGET}.xsa
+
 HOST_EXE = hostexe
 HOST_SRCS := ./host/host.cpp
+BUILD_DIR_MAIN = build
+EXEC_DIR = output
 
 FINAL_XCLBIN=mm_${TARGET}.xclbin
-TEMP_DIR := ./_x.$(TARGET).${PLATFORM_NAME}
-BUILD_DIR := ./build_dir.$(TARGET).${PLATFORM_NAME}
-KERNEL_XO :=$(TEMP_DIR)/dma0.xo 
+TEMP_DIR := ./$(BUILD_DIR_MAIN)/dma0.$(TARGET).${PLATFORM_NAME}
+BUILD_DIR := ./$(BUILD_DIR_MAIN)/build_dir.$(TARGET).${PLATFORM_NAME}
+KERNEL_XO :=$(TEMP_DIR)/dma0.xo
+
+# AIE specific variables
 GRAPH   := aie/aie_top_all.cpp
 LIBADF  = libadf.a
-AIE_CMPL_CMD = aiecompiler -platform=${PLATFORM} --target=hw --stacksize=1024 --pl-register-threshold=250 --pl-freq=230  -include="./aie" -include="./aie/layer0"  --constraints ./aie_top_all_aie_mapped.aiecst --disable-transform-broadcast-split=false -workdir=./Work ${GRAPH}
-AIE_SIM_CMD = aiesimulator --pkg-dir=./Work --dump-vcd foo --profile
+AIE_WORK_DIR = $(BUILD_DIR_MAIN)/Work_AIE
+AIE_SIM_DIR = simulation/aiesim
+AIE_CMPL_CMD = aiecompiler -platform=${PLATFORM} --target=hw --stacksize=1024 --pl-register-threshold=250 --pl-freq=230  -include="./aie" -include="./aie/layer0"  --constraints ./aie_top_all_aie_mapped.aiecst --disable-transform-broadcast-split=false -workdir=./$(AIE_WORK_DIR) ${GRAPH} --output-archive=$(EXEC_DIR)/$(LIBADF)
+AIE_SIM_CMD = aiesimulator --pkg-dir=./$(AIE_WORK_DIR) --dump-vcd $(AIE_SIM_DIR)foo --profile
 AIE_HOSTEXE = aie_control_xrt.o
 
 EMU_CMD = ./launch_hw_emu.sh
@@ -36,7 +48,7 @@ VCC      = v++
 VPP_XO_FLAGS += -c --platform $(PLATFORM) --save-temps --optimize 2 -g
 VPP_XO_FLAGS += --hls.jobs 8
 VPP_XO_FLAGS += -I$(CUR_DIR)/kernel
-VPP_XO_FLAGS += --profile.data all:all:all
+# VPP_XO_FLAGS += --profile.data all:all:all
 
 CXX := g++
 GCC_FLAGS := -Wall -c \
@@ -66,7 +78,7 @@ endif
 CLFLAGS += --hls.jobs 8
 CLFLAGS += --config ./conn.cfg 
 CLFLAGS += --kernel_frequency ${Frequency}
-CLFLAGS += --profile.data all:all:all
+# CLFLAGS += --profile.data all:all:all
 LDCLFLAGS := --vivado.synth.jobs 8 --vivado.impl.jobs 8
 
 .PHONY: clean
@@ -91,9 +103,10 @@ all: aie kernels build host package
 
 aie: guard-PLATFORM_REPO_PATHS ${LIBADF}
 ${LIBADF}: ${GRAPH}
-	@rm -rf Work libadf.a
-	@mkdir -p Work
-	${AIE_CMPL_CMD}
+	# @rm -rf $(AIE_WORK_DIR) $(EXEC_DIR)/libadf.a
+	@mkdir -p $(AIE_WORK_DIR)
+	@mkdir -p $(EXEC_DIR)
+	time ${AIE_CMPL_CMD}
 	@echo "COMPLETE: aie success."
 
 aiesim: ${LIBADF}
@@ -104,24 +117,28 @@ aiesim: ${LIBADF}
 kernels:$(KERNEL_XO)
 $(TEMP_DIR)/dma0.xo: kernel0/dma0.cpp kernel0/dma0.hpp
 	mkdir -p $(TEMP_DIR)
-	$(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 $< -o $@ | tee $(TEMP_DIR)/dma0.log
+	@mkdir -p $(EXEC_DIR)
+	time $(VCC) $(VPP_XO_FLAGS) -k dma0 --hls.clock 300000000:dma0 --temp_dir $(TEMP_DIR)/hls_kernel_temp/ $< -o $@ | tee $(TEMP_DIR)/dma0.log
 	@echo "### ***** dma0 compilation done! *****"
+
 build: $(BINARY_CONTAINERS)
 $(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} ${LIBADF}
 	mkdir -p $(BUILD_DIR)
-	v++ -l $(CLFLAGS) --temp_dir $(BUILD_DIR) $(LDCLFLAGS) -o $@ ${KERNEL_XO} ${LIBADF}
+	@mkdir -p $(EXEC_DIR)
+	time v++ -l $(CLFLAGS) --temp_dir $(BUILD_DIR) $(LDCLFLAGS) -o $@ ${KERNEL_XO} $(EXEC_DIR)/${LIBADF}
 
 host:$(HOST_EXE)
 $(HOST_EXE):
-	$(CXX) $(HOST_SRCS) $(GCC_FLAGS) -fopenmp $(GCC_INCLUDES) -o main.o
-	$(CXX) *.o $(GCC_LIB) -fopenmp -o $(HOST_EXE)
+	@mkdir -p $(EXEC_DIR)
+	time $(CXX) $(HOST_SRCS) $(GCC_FLAGS) -fopenmp $(GCC_INCLUDES) -o $(EXEC_DIR)/main.o
+	time $(CXX) $(EXEC_DIR)/*.o $(GCC_LIB) -fopenmp -o $(EXEC_DIR)/$(HOST_EXE)
 	@echo "COMPLETE: Host application created."
 
 package:${FINAL_XCLBIN}
 ${FINAL_XCLBIN}: $(BINARY_CONTAINERS) $(LIBADF) 
-	v++ -p -t $(TARGET) -f $(PLATFORM) $(BINARY_CONTAINERS) $(LIBADF) -o ${FINAL_XCLBIN} --package.boot_mode=ospi
+	@mkdir -p $(EXEC_DIR)
+	time v++ -p -t $(TARGET) -f $(PLATFORM) $(BINARY_CONTAINERS) $(EXEC_DIR)/$(LIBADF) -o $(EXEC_DIR)/${FINAL_XCLBIN} --package.boot_mode=ospi --temp_dir $(BUILD_DIR_MAIN)/package_temp
 	@echo "COMPLETE: package created."
-
 
 clean:
 	-$(RMDIR) $(HOST_EXE) $(XCLBIN)/{*sw_emu*,*hw_emu*} 
@@ -129,10 +146,10 @@ clean:
 	-$(RMDIR)  *v++* .Xil emconfig.json dltmp* xmltmp* *.log *.jou *.wcfg *.wdb *bin* *summary* *.BIN *.bif *.exe  *.log *.txt 
 
 cleanall: clean
-	-$(RMDIR) build_dir* sd_card*
+	-$(RMDIR) build* sd_card*
 	-$(RMDIR) package.* run_app.sh 
-	-$(RMDIR) *xclbin.run_summary qemu-memory-_* emulation _vimage pl* start_simulation.sh *.xclbin
-	$(MAKE) -C sw clean
+	-$(RMDIR) *xclbin.run_summary qemu-memory-_* emulation _vimage pl* start_simulation.sh *.xclbin .ipcache
+	-$(RMDIR) output
 
 cleansim:
 	-$(RMDIR) aiesimulator_output foo.vcd ISS_RPC_SERVER_PORT
@@ -140,3 +157,6 @@ cleantemp:
 	-$(RMDIR) ./_x.$(TARGET).${PLATFORM_NAME}
 cleanpac:
 	-$(RMDIR) hostexe main.o mm_hw.xclbin boot_image.bif BOOT.BIN aie.merged.cdo.bin
+
+# Sample Make Command 
+# time make -f Makefile_VCK5000 all &> make_all.log
