--- a/Multiple_Engine/int8/AIE256/Makefile_VCK5000
+++ b/Multiple_Engine/int8/AIE256/Makefile_VCK5000
@@ -29,7 +29,7 @@ GRAPH   := aie/aie_top_all.cpp
 LIBADF  = libadf.a
 AIE_WORK_DIR = $(BUILD_DIR_MAIN)/Work_AIE
 AIE_SIM_DIR = simulation/aiesim
-AIE_CMPL_CMD = aiecompiler -platform=${PLATFORM} --target=hw --stacksize=1024 --pl-register-threshold=250 --pl-freq=230  -include="./aie" -include="./aie/layer0"  --constraints ./aie_top_all_aie_mapped.aiecst --disable-transform-broadcast-split=false -workdir=./$(AIE_WORK_DIR) ${GRAPH} --output-archive=$(EXEC_DIR)/$(LIBADF)
+AIE_CMPL_CMD = aiecompiler -platform=${PLATFORM} --target=hw --stacksize=1024 --pl-register-threshold=250 --pl-freq=230  -include="./aie" -include="./aie/layer0"  --disable-transform-broadcast-split=false -workdir=./$(AIE_WORK_DIR) ${GRAPH} --output-archive=$(EXEC_DIR)/$(LIBADF)
 AIE_SIM_CMD = aiesimulator --pkg-dir=./$(AIE_WORK_DIR) --dump-vcd $(AIE_SIM_DIR)foo --profile
 AIE_HOSTEXE = aie_control_xrt.o
 
@@ -101,7 +101,7 @@ guard-PLATFORM_REPO_PATHS:
 
 all: aie kernels build host package
 
-aie: guard-PLATFORM_REPO_PATHS ${LIBADF}
+aie: guard-PLATFORM_REPO_PATHS $(EXEC_DIR)/${LIBADF}
 ${LIBADF}: ${GRAPH}
 	# @rm -rf $(AIE_WORK_DIR) $(EXEC_DIR)/libadf.a
 	@mkdir -p $(AIE_WORK_DIR)
@@ -122,7 +122,7 @@ $(TEMP_DIR)/dma0.xo: kernel0/dma0.cpp kernel0/dma0.hpp
 	@echo "### ***** dma0 compilation done! *****"
 
 build: $(BINARY_CONTAINERS)
-$(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} ${LIBADF}
+$(BUILD_DIR)/${XCLBIN}: ${KERNEL_XO} $(EXEC_DIR)/${LIBADF}
 	mkdir -p $(BUILD_DIR)
 	@mkdir -p $(EXEC_DIR)
 	time v++ -l $(CLFLAGS) --temp_dir $(BUILD_DIR) $(LDCLFLAGS) -o $@ ${KERNEL_XO} $(EXEC_DIR)/${LIBADF}
@@ -135,7 +135,7 @@ $(HOST_EXE):
 	@echo "COMPLETE: Host application created."
 
 package:${FINAL_XCLBIN}
-${FINAL_XCLBIN}: $(BINARY_CONTAINERS) $(LIBADF) 
+${FINAL_XCLBIN}: $(BINARY_CONTAINERS) $(EXEC_DIR)/$(LIBADF) 
 	@mkdir -p $(EXEC_DIR)
 	time v++ -p -t $(TARGET) -f $(PLATFORM) $(BINARY_CONTAINERS) $(EXEC_DIR)/$(LIBADF) -o $(EXEC_DIR)/${FINAL_XCLBIN} --package.boot_mode=ospi --temp_dir $(BUILD_DIR_MAIN)/package_temp
 	@echo "COMPLETE: package created."
