Add Analytical model from CHARM to the repo This is a hacked version of the analysitcal model that uses only the cdse.py to get the best runtime. The hardware configuration can be fixed when runnning the mdoel. matmul_model.py file is the main script that invokes the model

--- a/.gitignore
+++ b/.gitignore
@@ -65,8 +65,7 @@ Multiple_Engine/fp32/AIE16_isolated
 Multiple_Engine/FP32
 Multiple_Engine/AIE_ML
 Single_Engine/AIE_ML
-Analytical_Model
-
+__pycache__
 # Everything inside .vscode
 .vscode/
 
