Add debug info in xrt.ini

--- a/Multiple_Engine/fp32/AIE16/xrt.ini
+++ b/Multiple_Engine/fp32/AIE16/xrt.ini
@@ -1,4 +1,11 @@
 [Debug] 
-native_xrt_trace = true
-device_trace = fine
-lop_trace=true
+app_debug=true
+aie_status=true
+[Runtime] 
+runtime_log = console
+verbosity = 3
+
+[Emulation]
+kernel-dbg=true
+aliveness_message_interval=5
+print_infos_in_console=true
