Add extra files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@ compile_commands.json
 *.csv
 *ISS_RPC_SERVER_PORT*
 *pl_sample_counts*
+
+#extra junk files 
+Single_Engine/fp32_HW
+Single_Engine/fp32_HW_sw_emu
+Multiple_Engine/fp32/AIE16_sw_emu
+Single_Engine/exp_output_hw_fp32_hw_intrinsic
