Added a kernel with only single buffer ( No double buffering )

--- a/Single_Engine/fp32/Makefile_VCK190
+++ b/Single_Engine/fp32/Makefile_VCK190
@@ -6,8 +6,8 @@ MODE	 = linux
 HOST_ARCH = x86
 Frequency = 230
 #PLATFORM_REPO_PATHS=/mnt/vault0/kmhatre/software/AMD/platforms
-PLATFORM_REPO_PATHS=/opt/xilinx/platforms
-PLATFORM_NAME=xilinx_vck5000_gen4x8_qdma_2_202220_1
+# PLATFORM_REPO_PATHS=/opt/xilinx/platforms
+PLATFORM_NAME=xilinx_vck190_base_202220_1
 PLATFORM = ${PLATFORM_REPO_PATHS}/${PLATFORM_NAME}/${PLATFORM_NAME}.xpfm
 XCLBIN   = ${PLATFORM_NAME}${TARGET}.xclbin
 HOST_EXE = hostexe
